@@ -107,7 +107,6 @@
 		   "src/generators/bones"
 		   "src/generators/logistic"
 		   "src/generators/alloy"
-		   "src/generators/euclid"
 		   "src/parts/parts-header"
 		   "src/parts/expect"
 		   "src/parts/part"
@@ -138,6 +137,7 @@
 		   "src/composition/sections/preroll"
 		   "src/composition/sections/fin"
 		   "src/composition/bincue"
+		   "src/generators/euclid"
 		   "src/composition/binball"
 		   "src/inspection/interactive"
 		   "src/inspection/overview"
